# ipe-final-cpp

./: CMakeLists.txt  README.md
app/: main.cpp
include/: ImageProc.hpp  Numbers.hpp  Robot.hpp
include/_webots/: Controller.hpp  Encoder.hpp  MotorizedCamera.hpp  Wheel.hpp
include/webots/: Controller.hpp  Encoder.hpp  Motor.hpp
src/: ImageProc.cpp  Robot.cpp
src/_webots/: Controller.cpp  Encoder.cpp  Wheel.cpp
src/webots/: Controller.cpp  Encoder.cpp  Motor.cpp  MotorizedCamera.cpp  Wheel.cpp
tests/: camera_test.cpp  hsv_test.cpp
